@@ -6,6 +6,7 @@
     <property name="name" value="httpunit" />
     <property name="Name" value="HttpUnit" />
     <property name="version" value="1.6.2" />
+    <property name="revision" value="$Rev$" />
 
     <property name="debug" value="on" />
     <property name="deprecation" value="off" />
@@ -229,6 +230,7 @@ Sealed: false
 HttpUnit-Version: ${version}
 Build-Date: ${TODAY}
 Build-Time: ${TSTAMP}
+Revision: ${Revision}
 </echo>
     <jar jarfile="${lib.dir}/${name}.jar" manifest="${build.dir}/info.txt">
         <fileset dir="${build.classes}" includes="com/**"/>
